Bases terminadas, con respecto a productos y clientes, resta la logica de ventas

--- a/TestWeb/Views/Clients/Create.cshtml
+++ b/TestWeb/Views/Clients/Create.cshtml
@@ -7,7 +7,7 @@
 <div class="card shadow mb-4">
     <div class="card-body">
         <form novalidate>
-            <input name="id" id="id" type="hidden" value="">
+            <input name="id" id="id" type="hidden" value="@Model.id">
             <div class="form-row">
                 <div class="form-group col-6">
                     <label for="name">Nombre</label>
