--- a/TestWeb/Views/Products/Create.cshtml
+++ b/TestWeb/Views/Products/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Product
 @{
     ViewBag.Title = "Crear Clientes";
+    CultureInfo culinf = new CultureInfo("es-CO");
 }
 <h1 class="h3 mb-4 text-gray-800">Crear Producto</h1>
 <p class="mb-4">Aquí podrá crear productos, los cuales podrán ser adquiridos por clientes</p>
@@ -17,9 +18,9 @@
                 </div>
                 <div class="form-group col-6">
                     <label for="unitValue">Valor unitario</label>
-                    <input name="unitValue" id="unitValue" class="form-control" data-rule-required="true"
-                           data-msg-required="El campo valor unitario es requerido" data-rule-digits="true" data-msg-digits="Ingrese solo numeros"
-                           maxlength="150" value="@Model.unitValue">
+                    <input name="unitValue" id="unitValue" class="form-control money" data-rule-required="true"
+                           data-msg-required="El campo valor unitario es requerido" 
+                           data-prefix="" data-thousands="." data-decimal="," data-allow-zero="true" data-precision="0" value="@((string.Format(culinf, "{0:#,0.#}", float.Parse((Model.unitValue.ToString())))))">
                 </div>
             </div>           
             <div class="form-row">
