--- a/TestWeb/Views/_ViewImports.cshtml
+++ b/TestWeb/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using TestWeb.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.AspNetCore.Http.Extensions
+@using System.Globalization;
